[tool.poetry]
name = "logistics-contest"
version = "0.1.0"
description = ""
authors = ["Taichi <taichi.furukawa@maas.co.jp>"]
readme = "README.md"
packages = [{include = "logistics_contest"}]

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.17.1"
geopolars = {version = "^0.1.0a4", allow-prereleases = true}
requests = "^2.28.2"
joblib = "^1.2.0"
pandas = "^2.0.0"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
